--- a/src/app/components/main-client/main-client.component.html
+++ b/src/app/components/main-client/main-client.component.html
@@ -12,48 +12,38 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    background: url('assets/img/bg_cdxco.jpg');
+    background: url('assets/img/bg.jpg');
     background-size: cover;
   "
 >
   <div class="container">
-    <h1 class="text-center text-primary animate__animated animate__headShake">
-      RegistroQR
-    </h1>
     <div>
-      <p class="text-center text-white">
-        Por favor verifique su registro presentando su código QR en el lector
-        del dispositivo.
-      </p>
+      <h3 class="text-center text-dark">Por favor registre su asistencia</h3>
     </div>
     <br /><br />
     <p class="text-center">
-      <img
-        src="assets/img/demo-qr.png"
-        class="shadow animate__animated animate__bounceInUp"
-        style="border-radius: 12px"
-      />
+      <btn-focus
+        [type]="'info shadow'"
+        (click)="goinInSwal.fire(); setScanState(true)"
+        >Registrar</btn-focus
+      >
     </p>
   </div>
 </div>
 
 <swal
   #goinInSwal
-  [showCancelButton]="true"
-  [swalOptions]="{
-    confirmButtonText: 'Entrada',
-    cancelButtonText: 'Cerrar'
-  }"
-  (confirm)="goinInConfirm()"
-  (dismiss)="goinInDismiss()"
+  [showCancelButton]="false"
+  [showDenyButton]="false"
+  [showConfirmButton]="false"
+  [timer]="10000"
+  [timerProgressBar]="true"
 >
   <ng-container *swalPortal="swalTargets.title">
-    <h1 class="text-info">Bienvenido</h1>
+    <h2 class="text-dark">Bienvenido</h2>
   </ng-container>
   <ng-container *swalPortal="swalTargets.content">
-    <h3 class="text-info" *ngIf="registrantData">
-      {{ registrantData.firstName }} {{ registrantData.lastName }}
-    </h3>
+    <h4 class="text-primary">Acerca tu código al scanner!</h4>
   </ng-container>
 </swal>
 
@@ -111,15 +101,11 @@
       </div>
       <div class="row">
         <div class="col text-center">
-          Silla:
           <span
-            *ngIf="registrantData.chair.length > 0; else noChair"
-            class="text-center text-danger"
-            >{{ registrantData.chair }}</span
+            *ngIf="registrantData.country.length > 0"
+            class="text-center text-dark"
+            >{{ registrantData.country }}</span
           >
-          <ng-template #noChair>
-            <i class="fa fa-ban text-info"></i
-          ></ng-template>
         </div>
       </div>
     </div>
@@ -139,8 +125,4 @@
   (dismiss)="setScanState(true)"
 ></swal>
 
-<div style="position: absolute; bottom: 10px; right: 10px">
-  <btn-focus [type]="'info shadow'" (click)="setScanState(true)"
-    >Scan</btn-focus
-  >
-</div>
+<div style="position: absolute; bottom: 10px; right: 10px"></div>
